--- a/EmojiRating/index.html
+++ b/EmojiRating/index.html
@@ -22,6 +22,10 @@
                 <i class="far fa-laugh fa-3x"></i>
             </div>
 
+            <div class="exp">
+                <!-- Angry -->
+            </div>
+
 
             <div class="rating-container">
                 <i class="fa-sharp fa-solid fa-star fa-2x active"></i>
